src/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement
Rule 2     program -> program statement
Rule 3     io -> WRITE BRO expression BRC SEMICOLON
Rule 4     io -> WRITEN BRO expression BRC SEMICOLON
Rule 5     io -> IN BRO ID BRC SEMICOLON
Rule 6     io -> INN BRO ID BRC SEMICOLON
Rule 7     statement -> declaration
Rule 8     statement -> condition
Rule 9     statement -> cycle
Rule 10    statement -> expression SEMICOLON
Rule 11    statement -> io
Rule 12    statement -> assign
Rule 13    statement -> class_declaration
Rule 14    declaration -> VAR ID EQ expression SEMICOLON
Rule 15    declaration -> VAR ID SEMICOLON
Rule 16    assign -> ID EQ expression SEMICOLON
Rule 17    expression -> expression PLUS expression
Rule 18    expression -> expression MINUS expression
Rule 19    expression -> expression MULT expression
Rule 20    expression -> expression DIV expression
Rule 21    expression -> expression EQEQ expression
Rule 22    expression -> expression GREQ expression
Rule 23    expression -> expression LSEQ expression
Rule 24    expression -> expression LS expression
Rule 25    expression -> expression GR expression
Rule 26    expression -> expression AND expression
Rule 27    expression -> expression OR expression
Rule 28    expression -> NUMBER
Rule 29    expression -> ID
Rule 30    expression -> STRING
Rule 31    expression -> BRO expression BRC
Rule 32    expression -> NOT BRO expression BRC
Rule 33    condition -> IF BRO expression BRC BLOCKS program BLOCKE
Rule 34    cycle -> WHILE BRO expression BRC BLOCKS program BLOCKE
Rule 35    class_declaration -> CLASS ID BLOCKS class_body BLOCKE
Rule 36    class_body -> <empty>
Rule 37    class_body -> class_member
Rule 38    class_body -> class_body class_member
Rule 39    class_member -> access_specifier declaration SEMICOLON
Rule 40    class_member -> access_specifier function SEMICOLON
Rule 41    access_specifier -> PUBLIC
Rule 42    access_specifier -> PRIVATE
Rule 43    expression -> NEW ID BRO BRC
Rule 44    expression -> expression DOT ID
Rule 45    expression -> expression DOT ID BRO args BRC
Rule 46    args -> <empty>
Rule 47    args -> expression
Rule 48    args -> args COMMA expression
Rule 49    function -> TYPE ID BRO args BRC BLOCKS program BLOCKE
Rule 50    declaration -> TYPE ID EQ expression SEMICOLON

Terminals, with rules where they appear

AND                  : 26
BLOCKE               : 33 34 35 49
BLOCKS               : 33 34 35 49
BRC                  : 3 4 5 6 31 32 33 34 43 45 49
BRO                  : 3 4 5 6 31 32 33 34 43 45 49
CLASS                : 35
COMMA                : 48
DIV                  : 20
DOT                  : 44 45
EQ                   : 14 16 50
EQEQ                 : 21
GR                   : 25
GREQ                 : 22
ID                   : 5 6 14 15 16 29 35 43 44 45 49 50
IF                   : 33
IN                   : 5
INN                  : 6
LS                   : 24
LSEQ                 : 23
MINUS                : 18
MULT                 : 19
NEW                  : 43
NOT                  : 32
NUMBER               : 28
OR                   : 27
PLUS                 : 17
PRIVATE              : 42
PUBLIC               : 41
SEMICOLON            : 3 4 5 6 10 14 15 16 39 40 50
STRING               : 30
TYPE                 : 49 50
VAR                  : 14 15
WHILE                : 34
WRITE                : 3
WRITEN               : 4
error                : 

Nonterminals, with rules where they appear

access_specifier     : 39 40
args                 : 45 48 49
assign               : 12
class_body           : 35 38
class_declaration    : 13
class_member         : 37 38
condition            : 8
cycle                : 9
declaration          : 7 39
expression           : 3 4 10 14 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 31 32 33 34 44 45 47 48 50
function             : 40
io                   : 11
program              : 2 33 34 49 0
statement            : 1 2

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement
    (2) program -> . program statement
    (7) statement -> . declaration
    (8) statement -> . condition
    (9) statement -> . cycle
    (10) statement -> . expression SEMICOLON
    (11) statement -> . io
    (12) statement -> . assign
    (13) statement -> . class_declaration
    (14) declaration -> . VAR ID EQ expression SEMICOLON
    (15) declaration -> . VAR ID SEMICOLON
    (50) declaration -> . TYPE ID EQ expression SEMICOLON
    (33) condition -> . IF BRO expression BRC BLOCKS program BLOCKE
    (34) cycle -> . WHILE BRO expression BRC BLOCKS program BLOCKE
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression MULT expression
    (20) expression -> . expression DIV expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression GREQ expression
    (23) expression -> . expression LSEQ expression
    (24) expression -> . expression LS expression
    (25) expression -> . expression GR expression
    (26) expression -> . expression AND expression
    (27) expression -> . expression OR expression
    (28) expression -> . NUMBER
    (29) expression -> . ID
    (30) expression -> . STRING
    (31) expression -> . BRO expression BRC
    (32) expression -> . NOT BRO expression BRC
    (43) expression -> . NEW ID BRO BRC
    (44) expression -> . expression DOT ID
    (45) expression -> . expression DOT ID BRO args BRC
    (3) io -> . WRITE BRO expression BRC SEMICOLON
    (4) io -> . WRITEN BRO expression BRC SEMICOLON
    (5) io -> . IN BRO ID BRC SEMICOLON
    (6) io -> . INN BRO ID BRC SEMICOLON
    (16) assign -> . ID EQ expression SEMICOLON
    (35) class_declaration -> . CLASS ID BLOCKS class_body BLOCKE

    VAR             shift and go to state 10
    TYPE            shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 15
    NUMBER          shift and go to state 16
    ID              shift and go to state 11
    STRING          shift and go to state 17
    BRO             shift and go to state 14
    NOT             shift and go to state 18
    NEW             shift and go to state 19
    WRITE           shift and go to state 20
    WRITEN          shift and go to state 21
    IN              shift and go to state 22
    INN             shift and go to state 23
    CLASS           shift and go to state 24

    program                        shift and go to state 1
    statement                      shift and go to state 2
    declaration                    shift and go to state 3
    condition                      shift and go to state 4
    cycle                          shift and go to state 5
    expression                     shift and go to state 6
    io                             shift and go to state 7
    assign                         shift and go to state 8
    class_declaration              shift and go to state 9

state 1

    (0) S' -> program .
    (2) program -> program . statement
    (7) statement -> . declaration
    (8) statement -> . condition
    (9) statement -> . cycle
    (10) statement -> . expression SEMICOLON
    (11) statement -> . io
    (12) statement -> . assign
    (13) statement -> . class_declaration
    (14) declaration -> . VAR ID EQ expression SEMICOLON
    (15) declaration -> . VAR ID SEMICOLON
    (50) declaration -> . TYPE ID EQ expression SEMICOLON
    (33) condition -> . IF BRO expression BRC BLOCKS program BLOCKE
    (34) cycle -> . WHILE BRO expression BRC BLOCKS program BLOCKE
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression MULT expression
    (20) expression -> . expression DIV expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression GREQ expression
    (23) expression -> . expression LSEQ expression
    (24) expression -> . expression LS expression
    (25) expression -> . expression GR expression
    (26) expression -> . expression AND expression
    (27) expression -> . expression OR expression
    (28) expression -> . NUMBER
    (29) expression -> . ID
    (30) expression -> . STRING
    (31) expression -> . BRO expression BRC
    (32) expression -> . NOT BRO expression BRC
    (43) expression -> . NEW ID BRO BRC
    (44) expression -> . expression DOT ID
    (45) expression -> . expression DOT ID BRO args BRC
    (3) io -> . WRITE BRO expression BRC SEMICOLON
    (4) io -> . WRITEN BRO expression BRC SEMICOLON
    (5) io -> . IN BRO ID BRC SEMICOLON
    (6) io -> . INN BRO ID BRC SEMICOLON
    (16) assign -> . ID EQ expression SEMICOLON
    (35) class_declaration -> . CLASS ID BLOCKS class_body BLOCKE

    VAR             shift and go to state 10
    TYPE            shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 15
    NUMBER          shift and go to state 16
    ID              shift and go to state 11
    STRING          shift and go to state 17
    BRO             shift and go to state 14
    NOT             shift and go to state 18
    NEW             shift and go to state 19
    WRITE           shift and go to state 20
    WRITEN          shift and go to state 21
    IN              shift and go to state 22
    INN             shift and go to state 23
    CLASS           shift and go to state 24

    statement                      shift and go to state 25
    declaration                    shift and go to state 3
    condition                      shift and go to state 4
    cycle                          shift and go to state 5
    expression                     shift and go to state 6
    io                             shift and go to state 7
    assign                         shift and go to state 8
    class_declaration              shift and go to state 9

state 2

    (1) program -> statement .

    VAR             reduce using rule 1 (program -> statement .)
    TYPE            reduce using rule 1 (program -> statement .)
    IF              reduce using rule 1 (program -> statement .)
    WHILE           reduce using rule 1 (program -> statement .)
    NUMBER          reduce using rule 1 (program -> statement .)
    ID              reduce using rule 1 (program -> statement .)
    STRING          reduce using rule 1 (program -> statement .)
    BRO             reduce using rule 1 (program -> statement .)
    NOT             reduce using rule 1 (program -> statement .)
    NEW             reduce using rule 1 (program -> statement .)
    WRITE           reduce using rule 1 (program -> statement .)
    WRITEN          reduce using rule 1 (program -> statement .)
    IN              reduce using rule 1 (program -> statement .)
    INN             reduce using rule 1 (program -> statement .)
    CLASS           reduce using rule 1 (program -> statement .)
    $end            reduce using rule 1 (program -> statement .)
    BLOCKE          reduce using rule 1 (program -> statement .)


state 3

    (7) statement -> declaration .

    VAR             reduce using rule 7 (statement -> declaration .)
    TYPE            reduce using rule 7 (statement -> declaration .)
    IF              reduce using rule 7 (statement -> declaration .)
    WHILE           reduce using rule 7 (statement -> declaration .)
    NUMBER          reduce using rule 7 (statement -> declaration .)
    ID              reduce using rule 7 (statement -> declaration .)
    STRING          reduce using rule 7 (statement -> declaration .)
    BRO             reduce using rule 7 (statement -> declaration .)
    NOT             reduce using rule 7 (statement -> declaration .)
    NEW             reduce using rule 7 (statement -> declaration .)
    WRITE           reduce using rule 7 (statement -> declaration .)
    WRITEN          reduce using rule 7 (statement -> declaration .)
    IN              reduce using rule 7 (statement -> declaration .)
    INN             reduce using rule 7 (statement -> declaration .)
    CLASS           reduce using rule 7 (statement -> declaration .)
    $end            reduce using rule 7 (statement -> declaration .)
    BLOCKE          reduce using rule 7 (statement -> declaration .)


state 4

    (8) statement -> condition .

    VAR             reduce using rule 8 (statement -> condition .)
    TYPE            reduce using rule 8 (statement -> condition .)
    IF              reduce using rule 8 (statement -> condition .)
    WHILE           reduce using rule 8 (statement -> condition .)
    NUMBER          reduce using rule 8 (statement -> condition .)
    ID              reduce using rule 8 (statement -> condition .)
    STRING          reduce using rule 8 (statement -> condition .)
    BRO             reduce using rule 8 (statement -> condition .)
    NOT             reduce using rule 8 (statement -> condition .)
    NEW             reduce using rule 8 (statement -> condition .)
    WRITE           reduce using rule 8 (statement -> condition .)
    WRITEN          reduce using rule 8 (statement -> condition .)
    IN              reduce using rule 8 (statement -> condition .)
    INN             reduce using rule 8 (statement -> condition .)
    CLASS           reduce using rule 8 (statement -> condition .)
    $end            reduce using rule 8 (statement -> condition .)
    BLOCKE          reduce using rule 8 (statement -> condition .)


state 5

    (9) statement -> cycle .

    VAR             reduce using rule 9 (statement -> cycle .)
    TYPE            reduce using rule 9 (statement -> cycle .)
    IF              reduce using rule 9 (statement -> cycle .)
    WHILE           reduce using rule 9 (statement -> cycle .)
    NUMBER          reduce using rule 9 (statement -> cycle .)
    ID              reduce using rule 9 (statement -> cycle .)
    STRING          reduce using rule 9 (statement -> cycle .)
    BRO             reduce using rule 9 (statement -> cycle .)
    NOT             reduce using rule 9 (statement -> cycle .)
    NEW             reduce using rule 9 (statement -> cycle .)
    WRITE           reduce using rule 9 (statement -> cycle .)
    WRITEN          reduce using rule 9 (statement -> cycle .)
    IN              reduce using rule 9 (statement -> cycle .)
    INN             reduce using rule 9 (statement -> cycle .)
    CLASS           reduce using rule 9 (statement -> cycle .)
    $end            reduce using rule 9 (statement -> cycle .)
    BLOCKE          reduce using rule 9 (statement -> cycle .)


state 6

    (10) statement -> expression . SEMICOLON
    (17) expression -> expression . PLUS expression
    (18) expression -> expression . MINUS expression
    (19) expression -> expression . MULT expression
    (20) expression -> expression . DIV expression
    (21) expression -> expression . EQEQ expression
    (22) expression -> expression . GREQ expression
    (23) expression -> expression . LSEQ expression
    (24) expression -> expression . LS expression
    (25) expression -> expression . GR expression
    (26) expression -> expression . AND expression
    (27) expression -> expression . OR expression
    (44) expression -> expression . DOT ID
    (45) expression -> expression . DOT ID BRO args BRC

    SEMICOLON       shift and go to state 26
    PLUS            shift and go to state 27
    MINUS           shift and go to state 28
    MULT            shift and go to state 29
    DIV             shift and go to state 30
    EQEQ            shift and go to state 31
    GREQ            shift and go to state 32
    LSEQ            shift and go to state 33
    LS              shift and go to state 34
    GR              shift and go to state 35
    AND             shift and go to state 36
    OR              shift and go to state 37
    DOT             shift and go to state 38


state 7

    (11) statement -> io .

    VAR             reduce using rule 11 (statement -> io .)
    TYPE            reduce using rule 11 (statement -> io .)
    IF              reduce using rule 11 (statement -> io .)
    WHILE           reduce using rule 11 (statement -> io .)
    NUMBER          reduce using rule 11 (statement -> io .)
    ID              reduce using rule 11 (statement -> io .)
    STRING          reduce using rule 11 (statement -> io .)
    BRO             reduce using rule 11 (statement -> io .)
    NOT             reduce using rule 11 (statement -> io .)
    NEW             reduce using rule 11 (statement -> io .)
    WRITE           reduce using rule 11 (statement -> io .)
    WRITEN          reduce using rule 11 (statement -> io .)
    IN              reduce using rule 11 (statement -> io .)
    INN             reduce using rule 11 (statement -> io .)
    CLASS           reduce using rule 11 (statement -> io .)
    $end            reduce using rule 11 (statement -> io .)
    BLOCKE          reduce using rule 11 (statement -> io .)


state 8

    (12) statement -> assign .

    VAR             reduce using rule 12 (statement -> assign .)
    TYPE            reduce using rule 12 (statement -> assign .)
    IF              reduce using rule 12 (statement -> assign .)
    WHILE           reduce using rule 12 (statement -> assign .)
    NUMBER          reduce using rule 12 (statement -> assign .)
    ID              reduce using rule 12 (statement -> assign .)
    STRING          reduce using rule 12 (statement -> assign .)
    BRO             reduce using rule 12 (statement -> assign .)
    NOT             reduce using rule 12 (statement -> assign .)
    NEW             reduce using rule 12 (statement -> assign .)
    WRITE           reduce using rule 12 (statement -> assign .)
    WRITEN          reduce using rule 12 (statement -> assign .)
    IN              reduce using rule 12 (statement -> assign .)
    INN             reduce using rule 12 (statement -> assign .)
    CLASS           reduce using rule 12 (statement -> assign .)
    $end            reduce using rule 12 (statement -> assign .)
    BLOCKE          reduce using rule 12 (statement -> assign .)


state 9

    (13) statement -> class_declaration .

    VAR             reduce using rule 13 (statement -> class_declaration .)
    TYPE            reduce using rule 13 (statement -> class_declaration .)
    IF              reduce using rule 13 (statement -> class_declaration .)
    WHILE           reduce using rule 13 (statement -> class_declaration .)
    NUMBER          reduce using rule 13 (statement -> class_declaration .)
    ID              reduce using rule 13 (statement -> class_declaration .)
    STRING          reduce using rule 13 (statement -> class_declaration .)
    BRO             reduce using rule 13 (statement -> class_declaration .)
    NOT             reduce using rule 13 (statement -> class_declaration .)
    NEW             reduce using rule 13 (statement -> class_declaration .)
    WRITE           reduce using rule 13 (statement -> class_declaration .)
    WRITEN          reduce using rule 13 (statement -> class_declaration .)
    IN              reduce using rule 13 (statement -> class_declaration .)
    INN             reduce using rule 13 (statement -> class_declaration .)
    CLASS           reduce using rule 13 (statement -> class_declaration .)
    $end            reduce using rule 13 (statement -> class_declaration .)
    BLOCKE          reduce using rule 13 (statement -> class_declaration .)


state 10

    (14) declaration -> VAR . ID EQ expression SEMICOLON
    (15) declaration -> VAR . ID SEMICOLON

    ID              shift and go to state 39


state 11

    (29) expression -> ID .
    (16) assign -> ID . EQ expression SEMICOLON

    SEMICOLON       reduce using rule 29 (expression -> ID .)
    PLUS            reduce using rule 29 (expression -> ID .)
    MINUS           reduce using rule 29 (expression -> ID .)
    MULT            reduce using rule 29 (expression -> ID .)
    DIV             reduce using rule 29 (expression -> ID .)
    EQEQ            reduce using rule 29 (expression -> ID .)
    GREQ            reduce using rule 29 (expression -> ID .)
    LSEQ            reduce using rule 29 (expression -> ID .)
    LS              reduce using rule 29 (expression -> ID .)
    GR              reduce using rule 29 (expression -> ID .)
    AND             reduce using rule 29 (expression -> ID .)
    OR              reduce using rule 29 (expression -> ID .)
    DOT             reduce using rule 29 (expression -> ID .)
    EQ              shift and go to state 40


state 12

    (50) declaration -> TYPE . ID EQ expression SEMICOLON

    ID              shift and go to state 41


state 13

    (33) condition -> IF . BRO expression BRC BLOCKS program BLOCKE

    BRO             shift and go to state 42


state 14

    (31) expression -> BRO . expression BRC
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression MULT expression
    (20) expression -> . expression DIV expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression GREQ expression
    (23) expression -> . expression LSEQ expression
    (24) expression -> . expression LS expression
    (25) expression -> . expression GR expression
    (26) expression -> . expression AND expression
    (27) expression -> . expression OR expression
    (28) expression -> . NUMBER
    (29) expression -> . ID
    (30) expression -> . STRING
    (31) expression -> . BRO expression BRC
    (32) expression -> . NOT BRO expression BRC
    (43) expression -> . NEW ID BRO BRC
    (44) expression -> . expression DOT ID
    (45) expression -> . expression DOT ID BRO args BRC

    NUMBER          shift and go to state 16
    ID              shift and go to state 44
    STRING          shift and go to state 17
    BRO             shift and go to state 14
    NOT             shift and go to state 18
    NEW             shift and go to state 19

    expression                     shift and go to state 43

state 15

    (34) cycle -> WHILE . BRO expression BRC BLOCKS program BLOCKE

    BRO             shift and go to state 45


state 16

    (28) expression -> NUMBER .

    SEMICOLON       reduce using rule 28 (expression -> NUMBER .)
    PLUS            reduce using rule 28 (expression -> NUMBER .)
    MINUS           reduce using rule 28 (expression -> NUMBER .)
    MULT            reduce using rule 28 (expression -> NUMBER .)
    DIV             reduce using rule 28 (expression -> NUMBER .)
    EQEQ            reduce using rule 28 (expression -> NUMBER .)
    GREQ            reduce using rule 28 (expression -> NUMBER .)
    LSEQ            reduce using rule 28 (expression -> NUMBER .)
    LS              reduce using rule 28 (expression -> NUMBER .)
    GR              reduce using rule 28 (expression -> NUMBER .)
    AND             reduce using rule 28 (expression -> NUMBER .)
    OR              reduce using rule 28 (expression -> NUMBER .)
    DOT             reduce using rule 28 (expression -> NUMBER .)
    BRC             reduce using rule 28 (expression -> NUMBER .)
    COMMA           reduce using rule 28 (expression -> NUMBER .)


state 17

    (30) expression -> STRING .

    SEMICOLON       reduce using rule 30 (expression -> STRING .)
    PLUS            reduce using rule 30 (expression -> STRING .)
    MINUS           reduce using rule 30 (expression -> STRING .)
    MULT            reduce using rule 30 (expression -> STRING .)
    DIV             reduce using rule 30 (expression -> STRING .)
    EQEQ            reduce using rule 30 (expression -> STRING .)
    GREQ            reduce using rule 30 (expression -> STRING .)
    LSEQ            reduce using rule 30 (expression -> STRING .)
    LS              reduce using rule 30 (expression -> STRING .)
    GR              reduce using rule 30 (expression -> STRING .)
    AND             reduce using rule 30 (expression -> STRING .)
    OR              reduce using rule 30 (expression -> STRING .)
    DOT             reduce using rule 30 (expression -> STRING .)
    BRC             reduce using rule 30 (expression -> STRING .)
    COMMA           reduce using rule 30 (expression -> STRING .)


state 18

    (32) expression -> NOT . BRO expression BRC

    BRO             shift and go to state 46


state 19

    (43) expression -> NEW . ID BRO BRC

    ID              shift and go to state 47


state 20

    (3) io -> WRITE . BRO expression BRC SEMICOLON

    BRO             shift and go to state 48


state 21

    (4) io -> WRITEN . BRO expression BRC SEMICOLON

    BRO             shift and go to state 49


state 22

    (5) io -> IN . BRO ID BRC SEMICOLON

    BRO             shift and go to state 50


state 23

    (6) io -> INN . BRO ID BRC SEMICOLON

    BRO             shift and go to state 51


state 24

    (35) class_declaration -> CLASS . ID BLOCKS class_body BLOCKE

    ID              shift and go to state 52


state 25

    (2) program -> program statement .

    VAR             reduce using rule 2 (program -> program statement .)
    TYPE            reduce using rule 2 (program -> program statement .)
    IF              reduce using rule 2 (program -> program statement .)
    WHILE           reduce using rule 2 (program -> program statement .)
    NUMBER          reduce using rule 2 (program -> program statement .)
    ID              reduce using rule 2 (program -> program statement .)
    STRING          reduce using rule 2 (program -> program statement .)
    BRO             reduce using rule 2 (program -> program statement .)
    NOT             reduce using rule 2 (program -> program statement .)
    NEW             reduce using rule 2 (program -> program statement .)
    WRITE           reduce using rule 2 (program -> program statement .)
    WRITEN          reduce using rule 2 (program -> program statement .)
    IN              reduce using rule 2 (program -> program statement .)
    INN             reduce using rule 2 (program -> program statement .)
    CLASS           reduce using rule 2 (program -> program statement .)
    $end            reduce using rule 2 (program -> program statement .)
    BLOCKE          reduce using rule 2 (program -> program statement .)


state 26

    (10) statement -> expression SEMICOLON .

    VAR             reduce using rule 10 (statement -> expression SEMICOLON .)
    TYPE            reduce using rule 10 (statement -> expression SEMICOLON .)
    IF              reduce using rule 10 (statement -> expression SEMICOLON .)
    WHILE           reduce using rule 10 (statement -> expression SEMICOLON .)
    NUMBER          reduce using rule 10 (statement -> expression SEMICOLON .)
    ID              reduce using rule 10 (statement -> expression SEMICOLON .)
    STRING          reduce using rule 10 (statement -> expression SEMICOLON .)
    BRO             reduce using rule 10 (statement -> expression SEMICOLON .)
    NOT             reduce using rule 10 (statement -> expression SEMICOLON .)
    NEW             reduce using rule 10 (statement -> expression SEMICOLON .)
    WRITE           reduce using rule 10 (statement -> expression SEMICOLON .)
    WRITEN          reduce using rule 10 (statement -> expression SEMICOLON .)
    IN              reduce using rule 10 (statement -> expression SEMICOLON .)
    INN             reduce using rule 10 (statement -> expression SEMICOLON .)
    CLASS           reduce using rule 10 (statement -> expression SEMICOLON .)
    $end            reduce using rule 10 (statement -> expression SEMICOLON .)
    BLOCKE          reduce using rule 10 (statement -> expression SEMICOLON .)


state 27

    (17) expression -> expression PLUS . expression
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression MULT expression
    (20) expression -> . expression DIV expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression GREQ expression
    (23) expression -> . expression LSEQ expression
    (24) expression -> . expression LS expression
    (25) expression -> . expression GR expression
    (26) expression -> . expression AND expression
    (27) expression -> . expression OR expression
    (28) expression -> . NUMBER
    (29) expression -> . ID
    (30) expression -> . STRING
    (31) expression -> . BRO expression BRC
    (32) expression -> . NOT BRO expression BRC
    (43) expression -> . NEW ID BRO BRC
    (44) expression -> . expression DOT ID
    (45) expression -> . expression DOT ID BRO args BRC

    NUMBER          shift and go to state 16
    ID              shift and go to state 44
    STRING          shift and go to state 17
    BRO             shift and go to state 14
    NOT             shift and go to state 18
    NEW             shift and go to state 19

    expression                     shift and go to state 53

state 28

    (18) expression -> expression MINUS . expression
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression MULT expression
    (20) expression -> . expression DIV expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression GREQ expression
    (23) expression -> . expression LSEQ expression
    (24) expression -> . expression LS expression
    (25) expression -> . expression GR expression
    (26) expression -> . expression AND expression
    (27) expression -> . expression OR expression
    (28) expression -> . NUMBER
    (29) expression -> . ID
    (30) expression -> . STRING
    (31) expression -> . BRO expression BRC
    (32) expression -> . NOT BRO expression BRC
    (43) expression -> . NEW ID BRO BRC
    (44) expression -> . expression DOT ID
    (45) expression -> . expression DOT ID BRO args BRC

    NUMBER          shift and go to state 16
    ID              shift and go to state 44
    STRING          shift and go to state 17
    BRO             shift and go to state 14
    NOT             shift and go to state 18
    NEW             shift and go to state 19

    expression                     shift and go to state 54

state 29

    (19) expression -> expression MULT . expression
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression MULT expression
    (20) expression -> . expression DIV expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression GREQ expression
    (23) expression -> . expression LSEQ expression
    (24) expression -> . expression LS expression
    (25) expression -> . expression GR expression
    (26) expression -> . expression AND expression
    (27) expression -> . expression OR expression
    (28) expression -> . NUMBER
    (29) expression -> . ID
    (30) expression -> . STRING
    (31) expression -> . BRO expression BRC
    (32) expression -> . NOT BRO expression BRC
    (43) expression -> . NEW ID BRO BRC
    (44) expression -> . expression DOT ID
    (45) expression -> . expression DOT ID BRO args BRC

    NUMBER          shift and go to state 16
    ID              shift and go to state 44
    STRING          shift and go to state 17
    BRO             shift and go to state 14
    NOT             shift and go to state 18
    NEW             shift and go to state 19

    expression                     shift and go to state 55

state 30

    (20) expression -> expression DIV . expression
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression MULT expression
    (20) expression -> . expression DIV expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression GREQ expression
    (23) expression -> . expression LSEQ expression
    (24) expression -> . expression LS expression
    (25) expression -> . expression GR expression
    (26) expression -> . expression AND expression
    (27) expression -> . expression OR expression
    (28) expression -> . NUMBER
    (29) expression -> . ID
    (30) expression -> . STRING
    (31) expression -> . BRO expression BRC
    (32) expression -> . NOT BRO expression BRC
    (43) expression -> . NEW ID BRO BRC
    (44) expression -> . expression DOT ID
    (45) expression -> . expression DOT ID BRO args BRC

    NUMBER          shift and go to state 16
    ID              shift and go to state 44
    STRING          shift and go to state 17
    BRO             shift and go to state 14
    NOT             shift and go to state 18
    NEW             shift and go to state 19

    expression                     shift and go to state 56

state 31

    (21) expression -> expression EQEQ . expression
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression MULT expression
    (20) expression -> . expression DIV expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression GREQ expression
    (23) expression -> . expression LSEQ expression
    (24) expression -> . expression LS expression
    (25) expression -> . expression GR expression
    (26) expression -> . expression AND expression
    (27) expression -> . expression OR expression
    (28) expression -> . NUMBER
    (29) expression -> . ID
    (30) expression -> . STRING
    (31) expression -> . BRO expression BRC
    (32) expression -> . NOT BRO expression BRC
    (43) expression -> . NEW ID BRO BRC
    (44) expression -> . expression DOT ID
    (45) expression -> . expression DOT ID BRO args BRC

    NUMBER          shift and go to state 16
    ID              shift and go to state 44
    STRING          shift and go to state 17
    BRO             shift and go to state 14
    NOT             shift and go to state 18
    NEW             shift and go to state 19

    expression                     shift and go to state 57

state 32

    (22) expression -> expression GREQ . expression
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression MULT expression
    (20) expression -> . expression DIV expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression GREQ expression
    (23) expression -> . expression LSEQ expression
    (24) expression -> . expression LS expression
    (25) expression -> . expression GR expression
    (26) expression -> . expression AND expression
    (27) expression -> . expression OR expression
    (28) expression -> . NUMBER
    (29) expression -> . ID
    (30) expression -> . STRING
    (31) expression -> . BRO expression BRC
    (32) expression -> . NOT BRO expression BRC
    (43) expression -> . NEW ID BRO BRC
    (44) expression -> . expression DOT ID
    (45) expression -> . expression DOT ID BRO args BRC

    NUMBER          shift and go to state 16
    ID              shift and go to state 44
    STRING          shift and go to state 17
    BRO             shift and go to state 14
    NOT             shift and go to state 18
    NEW             shift and go to state 19

    expression                     shift and go to state 58

state 33

    (23) expression -> expression LSEQ . expression
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression MULT expression
    (20) expression -> . expression DIV expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression GREQ expression
    (23) expression -> . expression LSEQ expression
    (24) expression -> . expression LS expression
    (25) expression -> . expression GR expression
    (26) expression -> . expression AND expression
    (27) expression -> . expression OR expression
    (28) expression -> . NUMBER
    (29) expression -> . ID
    (30) expression -> . STRING
    (31) expression -> . BRO expression BRC
    (32) expression -> . NOT BRO expression BRC
    (43) expression -> . NEW ID BRO BRC
    (44) expression -> . expression DOT ID
    (45) expression -> . expression DOT ID BRO args BRC

    NUMBER          shift and go to state 16
    ID              shift and go to state 44
    STRING          shift and go to state 17
    BRO             shift and go to state 14
    NOT             shift and go to state 18
    NEW             shift and go to state 19

    expression                     shift and go to state 59

state 34

    (24) expression -> expression LS . expression
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression MULT expression
    (20) expression -> . expression DIV expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression GREQ expression
    (23) expression -> . expression LSEQ expression
    (24) expression -> . expression LS expression
    (25) expression -> . expression GR expression
    (26) expression -> . expression AND expression
    (27) expression -> . expression OR expression
    (28) expression -> . NUMBER
    (29) expression -> . ID
    (30) expression -> . STRING
    (31) expression -> . BRO expression BRC
    (32) expression -> . NOT BRO expression BRC
    (43) expression -> . NEW ID BRO BRC
    (44) expression -> . expression DOT ID
    (45) expression -> . expression DOT ID BRO args BRC

    NUMBER          shift and go to state 16
    ID              shift and go to state 44
    STRING          shift and go to state 17
    BRO             shift and go to state 14
    NOT             shift and go to state 18
    NEW             shift and go to state 19

    expression                     shift and go to state 60

state 35

    (25) expression -> expression GR . expression
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression MULT expression
    (20) expression -> . expression DIV expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression GREQ expression
    (23) expression -> . expression LSEQ expression
    (24) expression -> . expression LS expression
    (25) expression -> . expression GR expression
    (26) expression -> . expression AND expression
    (27) expression -> . expression OR expression
    (28) expression -> . NUMBER
    (29) expression -> . ID
    (30) expression -> . STRING
    (31) expression -> . BRO expression BRC
    (32) expression -> . NOT BRO expression BRC
    (43) expression -> . NEW ID BRO BRC
    (44) expression -> . expression DOT ID
    (45) expression -> . expression DOT ID BRO args BRC

    NUMBER          shift and go to state 16
    ID              shift and go to state 44
    STRING          shift and go to state 17
    BRO             shift and go to state 14
    NOT             shift and go to state 18
    NEW             shift and go to state 19

    expression                     shift and go to state 61

state 36
